fix+refactor(web): hide overflowed content, refactor constants import;

--- a/actor-apps/app-web/src/styles/app.scss
+++ b/actor-apps/app-web/src/styles/app.scss
@@ -6,7 +6,8 @@ html {
 }
 body {
   font-family: 'RobotoDraft', 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  //overflow: hidden;
+
+  overflow: hidden;
 
   box-sizing: border-box;
   width: 100%;
